# MP_for_AV

./: README.md
carla_client/: CBF_test.py  pedal_map.xlsx  pedal_map_data backup.xlsx  pedal_map_data.xlsx  plot_graph.py  sim_car.py  working_pygame_code.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
multi_topic_bag/: metadata.yaml  multi_topic_bag_0.db3
test_MPC/: CBF_constraints.py  CBF_constraints_old.py  acados_controller.py  acados_ocp.json  ackerman_model.py  build_NLP.py  cbf_solver.cpp  main.py  plotFcn.py  utils.py
test_MPC/c_generated_code/: Makefile  acados_sim_solver_ackerman_model.c  acados_sim_solver_ackerman_model.h  acados_solver_ackerman_model.c  acados_solver_ackerman_model.h  main_ackerman_model.c  main_sim_ackerman_model.c
test_MPC/c_generated_code/ackerman_model_constraints/: ackerman_model_constr_h_fun.c  ackerman_model_constr_h_fun_jac_uxt_zt.c  ackerman_model_constr_h_fun_jac_uxt_zt_hess.c  ackerman_model_constraints.h
test_MPC/c_generated_code/ackerman_model_cost/: ackerman_model_cost_ext_cost_0_fun.c  ackerman_model_cost_ext_cost_0_fun_jac.c  ackerman_model_cost_ext_cost_0_fun_jac_hess.c  ackerman_model_cost_ext_cost_e_fun.c  ackerman_model_cost_ext_cost_e_fun_jac.c  ackerman_model_cost_ext_cost_e_fun_jac_hess.c  ackerman_model_cost_ext_cost_fun.c  ackerman_model_cost_ext_cost_fun_jac.c  ackerman_model_cost_ext_cost_fun_jac_hess.c  ackerman_model_cost_y_0_fun.c  ackerman_model_cost_y_0_fun_jac_ut_xt.c  ackerman_model_cost_y_0_hess.c  ackerman_model_cost_y_e_fun.c  ackerman_model_cost_y_e_fun_jac_ut_xt.c  ackerman_model_cost_y_e_hess.c  ackerman_model_cost_y_fun.c  ackerman_model_cost_y_fun_jac_ut_xt.c  ackerman_model_cost_y_hess.c
test_MPC/c_generated_code/ackerman_model_model/: ackerman_model_expl_ode_fun.c  ackerman_model_expl_ode_hess.c  ackerman_model_expl_vde_adj.c  ackerman_model_expl_vde_forw.c  ackerman_model_impl_dae_fun.c  ackerman_model_impl_dae_fun_jac_x_xdot_u.c  ackerman_model_impl_dae_fun_jac_x_xdot_u_z.c  ackerman_model_impl_dae_fun_jac_x_xdot_z.c  ackerman_model_impl_dae_hess.c  ackerman_model_impl_dae_jac_x_xdot_u_z.c  ackerman_model_model.h
test_MPC/tracks/: generate_tracks copy.py  generate_tracks.py  line.txt  sine_wave.txt
test_casadi/: test_casadi.py
vd_cmd_sender/: package.xml  setup.cfg  setup.py
vd_config/: package.xml  setup.cfg  setup.py
vd_config/config/: controller_param.yaml  main_config.yaml  planner_config.yaml  vd_param.yaml
vd_config/vd_config/: read_param.py
vd_data_saver/: setup.cfg  setup.py
vd_data_saver/vd_data_saver/: data_saver_node.py  plot_graphs.py
vd_global_planner/: package.xml  setup.cfg  setup.py
vd_global_planner/launch/: sim_launch.py
vd_global_planner/vd_global_planner/: a_star.py  a_star_node.py  generate_traj_function.py
vd_local_planner/: CMakeLists.txt  build.sh  mpc_build.sh  package.xml
vd_local_planner/include/vd_local_planner/: acados_solver_ackerman_model.h  cbf_solver.h  nmpc_control.h  polytopes.h  wrapper.h
vd_local_planner/scripts/: CBF_constraints.py  acados_controller.py  acados_ocp.json  ackerman_model.py  cbf_solver.cpp  gen_CBF_solver.py  geometric_utils.py  my_solver.c  my_solver.h  utils.py
vd_local_planner/scripts/c_generated_code/: Makefile  acados_sim_solver_ackerman_model.c  acados_sim_solver_ackerman_model.h  acados_solver_ackerman_model.c  acados_solver_ackerman_model.h
vd_local_planner/scripts/c_generated_code/ackerman_model_constraints/: ackerman_model_constr_h_fun.c  ackerman_model_constr_h_fun_jac_uxt_zt.c
vd_local_planner/scripts/c_generated_code/ackerman_model_cost/: ackerman_model_cost_ext_cost_0_fun.c  ackerman_model_cost_ext_cost_0_fun_jac.c  ackerman_model_cost_ext_cost_0_fun_jac_hess.c  ackerman_model_cost_ext_cost_e_fun.c  ackerman_model_cost_ext_cost_e_fun_jac.c  ackerman_model_cost_ext_cost_e_fun_jac_hess.c  ackerman_model_cost_ext_cost_fun.c  ackerman_model_cost_ext_cost_fun_jac.c  ackerman_model_cost_ext_cost_fun_jac_hess.c
vd_local_planner/scripts/c_generated_code/ackerman_model_model/: ackerman_model_expl_ode_fun.c  ackerman_model_expl_vde_adj.c  ackerman_model_expl_vde_forw.c
vd_local_planner/src/: ackerman_model_constr_h_fun.c  cbf_solver.cpp  mpc_control_node.cpp  nmpc_control.cpp  nmpc_control_node.cpp  wrapper.cpp
vd_msgs/: CMakeLists.txt
vd_msgs/msg/: VDControlCMD.msg
vd_pid_controller/: setup.py
vd_pid_controller/vd_pid_controller/: pid_controller_node.py
(+153 files in other folders)
